crates/wdl-ast/tests/validation/conflicting-struct-names/source.errors
error: conflicting struct name `Foo`
   ┌─ tests/validation/conflicting-struct-names/source.wdl:15:8
   │
 7 │ struct Foo {
   │        --- the struct with the conflicting name is here
   ·
15 │ struct Foo {
   │        ^^^ this conflicts with a struct of the same name

error: conflicting struct name `Bar`
   ┌─ tests/validation/conflicting-struct-names/source.wdl:19:8
   │
11 │ struct Bar {
   │        --- the struct with the conflicting name is here
   ·
19 │ struct Bar {
   │        ^^^ this conflicts with a struct of the same name

error: conflicting struct name `Baz`
   ┌─ tests/validation/conflicting-struct-names/source.wdl:23:8
   │
 5 │ import "foo" alias Foo as Baz
   │                           --- the struct with the conflicting name is here
   ·
23 │ struct Baz {
   │        ^^^ this conflicts with a struct of the same name

error: conflicting struct name `Foo`
   ┌─ tests/validation/conflicting-struct-names/source.wdl:27:27
   │
 7 │ struct Foo {
   │        --- the struct with the conflicting name is here
   ·
27 │ import "Bar" alias Baz as Foo
   │                           ^^^ this conflicts with a struct of the same name

error: conflicting struct name `Qux`
   ┌─ tests/validation/conflicting-struct-names/source.wdl:29:40
   │
29 │ import "qux" alias A as Qux alias B as Qux
   │                         ---            ^^^ this conflicts with a struct of the same name
   │                         │               
   │                         the struct with the conflicting name is here

